--- a/PCA and visualization - a demo analysis.ipynb
+++ b/PCA and visualization - a demo analysis.ipynb
@@ -903,6 +903,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Only the first three components are relevant, therefore we could see how pairplots look like:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 136,
    "metadata": {},
@@ -1006,6 +1013,15 @@
     "    sns.barplot(['sp', 'sex', 'FL', 'RW', 'CL', 'CW', 'BD'],i,ax=axes[j]).set_title(c)\n",
     "    \n",
     "    j+=1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "While the second and the third new components are directly related with the *sex* and *species* feature, \n",
+    "the first one is connected with the physical attributes of the crab. \n",
+    "We can easily interpret this as a **cumulative physical feature**."
    ]
   }
  ],
